develop check result endpoint
