# gen/proto/api/proxychecker/proxychecker.pb.gw.go
@@ -62,6 +62,33 @@ func local_request_Proxychecker_Check_0(ctx context.Context, marshaler runtime.M
 	return msg, metadata, err
 }
 
+func request_Proxychecker_CheckResult_0(ctx context.Context, marshaler runtime.Marshaler, client ProxycheckerClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq CheckResultRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	msg, err := client.CheckResult(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_Proxychecker_CheckResult_0(ctx context.Context, marshaler runtime.Marshaler, server ProxycheckerServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq CheckResultRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.CheckResult(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 // RegisterProxycheckerHandlerServer registers the http handlers for service Proxychecker to "mux".
 // UnaryRPC     :call ProxycheckerServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -87,6 +114,26 @@ func RegisterProxycheckerHandlerServer(ctx context.Context, mux *runtime.ServeMu
 			return
 		}
 		forward_Proxychecker_Check_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodPost, pattern_Proxychecker_CheckResult_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/proxychecker.Proxychecker/CheckResult", runtime.WithHTTPPathPattern("/proxychecker.Proxychecker/CheckResult"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_Proxychecker_CheckResult_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_Proxychecker_CheckResult_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 
 	return nil
@@ -145,13 +192,32 @@ func RegisterProxycheckerHandlerClient(ctx context.Context, mux *runtime.ServeMu
 		}
 		forward_Proxychecker_Check_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodPost, pattern_Proxychecker_CheckResult_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/proxychecker.Proxychecker/CheckResult", runtime.WithHTTPPathPattern("/proxychecker.Proxychecker/CheckResult"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_Proxychecker_CheckResult_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_Proxychecker_CheckResult_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	return nil
 }
 
 var (
-	pattern_Proxychecker_Check_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"proxychecker.Proxychecker", "Check"}, ""))
+	pattern_Proxychecker_Check_0       = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"proxychecker.Proxychecker", "Check"}, ""))
+	pattern_Proxychecker_CheckResult_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"proxychecker.Proxychecker", "CheckResult"}, ""))
 )
 
 var (
-	forward_Proxychecker_Check_0 = runtime.ForwardResponseMessage
+	forward_Proxychecker_Check_0       = runtime.ForwardResponseMessage
+	forward_Proxychecker_CheckResult_0 = runtime.ForwardResponseMessage
 )
